log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:26:04 PM UTC: 
 tests:  0|6
total_score: 0/70
57c80fe
Thu 30 Mar 2023 03:27:37 PM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:29: error: expected expression before ‘ArrayList’
   15 |   ArrayList* nuevaLista = (*ArrayList) calloc(1, sizeof(ArrayList));
      |                             ^~~~~~~~~
arraylist.c:15:40: error: expected ‘,’ or ‘;’ before ‘calloc’
   15 |   ArrayList* nuevaLista = (*ArrayList) calloc(1, sizeof(ArrayList));
      |                                        ^~~~~~
Compilation failed
e74b3d6
Thu 30 Mar 2023 03:27:55 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
ec7a0d9
Thu 30 Mar 2023 03:28:30 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:22: error: expected expression before ‘void’
   16 |   nuevaLista->data = void;
      |                      ^~~~
Compilation failed
c7ed1a8
Thu 30 Mar 2023 03:29:47 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
b194326
Thu 30 Mar 2023 03:31:18 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
184c89c
Thu 30 Mar 2023 03:31:32 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
44c12ec
Thu 30 Mar 2023 03:32:23 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
75c8562
Thu 30 Mar 2023 03:33:34 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:25:6: error: expected identifier before ‘*’ token
   25 |   l->*(data+l->size) = data;
      |      ^
Compilation failed
37e1562
Thu 30 Mar 2023 03:33:46 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:25:19: error: lvalue required as left operand of assignment
   25 |   l->data+l->size = data;
      |                   ^
Compilation failed
a2e295e
Thu 30 Mar 2023 03:34:49 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:25:6: error: ‘size’ undeclared (first use in this function); did you mean ‘dysize’?
   25 |   if(size==capacity) l->data = realloc(data, 2*l->size);
      |      ^~~~
      |      dysize
arraylist.c:25:6: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:25:12: error: ‘capacity’ undeclared (first use in this function)
   25 |   if(size==capacity) l->data = realloc(data, 2*l->size);
      |            ^~~~~~~~
arraylist.c:26:19: error: lvalue required as left operand of assignment
   26 |   l->data+l->size = data;
      |                   ^
Compilation failed
caacfee
Thu 30 Mar 2023 03:35:13 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:26:19: error: lvalue required as left operand of assignment
   26 |   l->data+l->size = data;
      |                   ^
Compilation failed
17dd6f3
Thu 30 Mar 2023 03:35:42 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
547459a
Thu 30 Mar 2023 03:36:33 PM UTC: 
 arraylist.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:31:3: error: ‘size’ undeclared (first use in this function); did you mean ‘dysize’?
   31 |   size++;
      |   ^~~~
      |   dysize
arraylist.c:31:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
933f648
Thu 30 Mar 2023 03:36:41 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7886a67
Thu 30 Mar 2023 03:36:56 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d5ce819
Thu 30 Mar 2023 03:37:14 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7cd62a6
Thu 30 Mar 2023 03:38:00 PM UTC: 
 arraylist.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
c9775f4
Thu 30 Mar 2023 03:38:34 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a8a898d
Thu 30 Mar 2023 03:40:01 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
902bbbf
Thu 30 Mar 2023 03:40:17 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f85b14e
Thu 30 Mar 2023 03:40:51 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1ceddc3
Thu 30 Mar 2023 03:41:00 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6b50781
Thu 30 Mar 2023 03:43:20 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
6581656
Thu 30 Mar 2023 03:43:56 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
dfef2fa
Thu 30 Mar 2023 03:44:49 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
9534c15
Thu 30 Mar 2023 03:46:15 PM UTC: 
 arraylist.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:26:5: error: ‘nuevaCapacidad’ undeclared (first use in this function)
   26 |     nuevaCapacidad = l->capacity * 2;
      |     ^~~~~~~~~~~~~~
arraylist.c:26:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4b9a6d0
Thu 30 Mar 2023 03:46:23 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d0ae6b1
Thu 30 Mar 2023 03:46:42 PM UTC: 
 arraylist.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
1987cc6
Thu 30 Mar 2023 03:48:02 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
bb3ca2a
Thu 30 Mar 2023 03:49:01 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
a02684e
Thu 30 Mar 2023 03:50:14 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1d1205b
Thu 30 Mar 2023 03:50:25 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
0aab357
Thu 30 Mar 2023 03:51:51 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b0f3d38
Thu 30 Mar 2023 03:52:09 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
fe3a2e2
Thu 30 Mar 2023 03:52:29 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6eabb8a
Thu 30 Mar 2023 03:52:44 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
7e998aa
Thu 30 Mar 2023 03:53:03 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
adf5a57
